Port the Algolia Search to the v4

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -57,6 +57,7 @@ $bd-info:           #5bc0de;
 @import "browser-bugs";
 @import "brand";
 @import "zeroclipboard";
+@import "search";
 
 // Load docs dependencies
 @import "syntax";
