--- a/docs/_includes/nav-docs.html
+++ b/docs/_includes/nav-docs.html
@@ -1,8 +1,19 @@
 <div class="bd-sidebar">
 
   <form class="bd-search hidden-sm-down">
-    <input type="text" class="form-control" id="search-input" placeholder="Search...">
-    <div class="dropdown-menu bd-search-results" id="search-results"></div>
+    <label class="sr-only" aria-label="Search" for="bd-search-input">Search</label>
+    <div class="input-group">
+      <input type="text" class="form-control" id="bd-search-input" accesskey="s" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Search the docs...">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="submit">
+          <i class="glyphicon glyphicon-search"></i>
+        </button>
+      </span>
+    </div>
+    <label for="bd-toggle-search" class="bd-toggle-search-close">
+      <span class="sr-only">Close search</span>
+      <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
+    </label>
   </form>
 
   <nav class="bd-links" id="docsNavbarContent">
