--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -34,9 +34,7 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="https://cdn.jsdelivr.net/typeahead.js/0.10.5/typeahead.jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/algoliasearch/3.7.5/algoliasearch.min.js"></script>
-<script src="https://cdn.jsdelivr.net/hogan.js/3.0.2/hogan.min.js"></script>
+<script src="https://cdn.jsdelivr.net/g/typeahead.js@0.10.5%28typeahead.jquery.min.js%29,hogan.js@3.0.2%28hogan.min.js%29,algoliasearch@3.7.5%28algoliasearch.min.js%29"></script>
 
 {% if site.github %}
   <script src="../dist/js/bootstrap.min.js"></script>
