Small link to the PR

--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -1,5 +1,9 @@
 <input type="checkbox" id="bs-toggle-search" class="bs-toggle-search-checkbox" />
 <header class="navbar navbar-fixed-top bs-docs-nav bs-no-js" id="top" role="banner">
+  <div class="github-pr" style="color: #553D7C; border-bottom: 1px double #553D7C; text-align: center; padding: 4px; font-weight: bold">
+    Check out the <a href="https://github.com/twbs/bootstrap/pull/16901" style="color: #553D7C; text-decoration: underline" target="_blank">Pull-Request on GitHub</a>
+    <i class="glyphicon glyphicon-share"></i>
+  </div>
   <div class="container">
 
     <a href="../" class="navbar-brand">Bootstrap</a>
