--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -56,3 +56,11 @@
   ga('create', 'UA-146052-10', 'getbootstrap.com');
   ga('send', 'pageview');
 </script>
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="http://bootstrap.algolia.com">
+<meta name="twitter:title" content="Search Bootstrap Documentation">
+<meta name="twitter:description" content="Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.">
+<meta name="twitter:image" content="https://pbs.twimg.com/media/CLiV39vUMAAWyf8.png">
+<meta name="twitter:image:width" content="599">
+<meta name="twitter:image:height" content="338">
