Hide the Twitter button on mobile

--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -3,10 +3,12 @@
   <div class="github-pr" style="color: #553D7C; border-bottom: 1px double #553D7C; text-align: center; padding: 4px; font-weight: bold">
     Check out the <a href="https://github.com/twbs/bootstrap/pull/16901" style="color: #553D7C; text-decoration: underline" target="_blank">Pull-Request on GitHub</a>
     <i class="glyphicon glyphicon-share"></i>
-    or
-    <span style="display: inline-block; margin-right: 20px;">
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bootstrap.algolia.com" data-text="Search Bootstrap Documentation  #CSS #javascript #Search" data-via="algolia"></a>
+    <span class="hidden-xs">
+      or
+      <span style="display: inline-block; margin-right: 20px;">
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bootstrap.algolia.com" data-text="Search Bootstrap Documentation  #CSS #javascript #Search" data-via="algolia"></a>
+      </span>
     </span>
   </div>
   <div class="container">
