--- a/docs/_includes/nav-docs.html
+++ b/docs/_includes/nav-docs.html
@@ -1,8 +1,7 @@
 <div class="bd-sidebar">
 
   <form class="bd-search hidden-sm-down">
-    <input type="text" class="form-control" id="search-input" placeholder="Search...">
-    <div class="dropdown-menu bd-search-results" id="search-results"></div>
+    <input type="text" class="form-control" id="search-input" accesskey="s" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Search the docs...">
   </form>
 
   <nav class="bd-links" id="docsNavbarContent">
